# veda

./: .gitignore  .gitmodules  .project  .travis.yml  22-rdf-syntax-ns.ttl  CHANGELOG.txt  CNAME  COMMIT.md  Dependencies  Dockerfile  Gruntfile.js  LICENSE  Makefile  README  README.md  _config.yml  auth.txt  build-component.sh  build-server.sh  build-trace.sh  build-web.sh  build.sh  control-backup.sh  control-install.sh  control-start.sh  control-stop.sh  control-update.sh  dev.haproxy.cfg  doc1.txt  dub.json  e.beam  e.erl  haproxy  haproxy.cfg  haproxy.cfg.of  index.html  jsduck.sh  llama_config.toml  m-trace.sh  m.sh  (+26 more)
!/: veda-ontology-editor.ttl
.circleci/: config.yml
.github/: FUNDING.yml
05getting-started/: index.md
10docs/: index.html  intro.html
90about/: index.html
_includes/: footer.html  head.html  header.html  navigation.html
_posts/: 2016-01-19-update.markdown  2016-01-19-welcome-to-jekyll.markdown
compass_grid/: demo.html  pageData.php
conf/: veda.modules  veda.properties
config/: transcription.toml  veda-fanout-email.ini
cron/: add_to_crontab.sh  delete_from_crontab.sh  set_to_crontab.sh  veda-trigger-daily.sh  veda-trigger-hourly.sh  veda-trigger-monthly.sh  veda-trigger-weekly.sh  veda-trigger-yearly.sh  veda-trigger.sh
css/: main.scss
demo/: demo-individual-InternalUserAccount.ttl  demo-individual-rights.ttl
doc/: Ontology API.txt  auth-exclusive.txt  auth-group-generators.txt  auth.txt  ccus.txt  client.txt  faq.txt  highlights.txt  org-structure.txt  queue-state.txt  rest-api-errcode.txt  rest-tarantool-exchange.txt  search.txt  server-side-scripts.txt  smtp-server.txt  veda-server.txt
docker/: build-veda-docker.sh  docker-compose.yml  start.sh
ebin/: hello_dtl.beam  veda@client.app  veda@client.beam  veda@client_app.beam  veda@client_resource.beam  veda@client_sup.beam
files/: .gitignore
fixes/: ContractSpecification-RequestContractDetail.js  accounting_doc_fix.js  appointments_fix.js  audit_internal_fix.js  backward_fix.js  claim_fix.js  correspondent.js  delegated_labels_fix.js  deleted positions.js  file_fix.js  fix-letters.js  fix_audit_safety_action.js  fix_letters.js  fix_user_thing.js  of_sql.js  pass_fix.js  representative_costs_fix.js  restore_memberships.js  (+5 more)
source-server/veda-auth/: Cargo.toml
source-server/veda-auth/src/: auth.rs  common.rs  main.rs
source-server/veda-bootstrap/: Cargo.toml
source-server/veda-ccus2/: Cargo.toml
source-server/veda-ccus2/src/: command.rs  queue_prepare.rs
source-server/veda-mstorage/: Cargo.toml
source-server/veda-mstorage/src/: main.rs  transaction.rs
source-server/veda-web-api/: Cargo.toml
source-server/veda-web-api/src/: auth.rs  get.rs  main.rs  query.rs  user_activity.rs
source/authorization/: Cargo.toml  authorization.h
source/authorization/src/: authorization.rs  az_c_export.rs  lib.rs
source/libauthorization/: Cargo.toml  build.rs-
source/libauthorization/src/: az_c_export.rs  lib.rs
source/libvqueueinfo2c/: Cargo.toml  build.rs-  vqueueinfo.h
source/libvqueueinfo2c/src/: lib.rs  vqueue_c_export.rs
source/tt-az/: Cargo.toml  run-az-tests.sh
source/tt-az/src/: lib.rs
source/tt-az/tt/: clean-db.sh  init-az.lua
source/tt-az/tt/db/memtx/: memtx.txt
source/v-exim/: Cargo.toml
source/v-exim/src/: configuration.rs  exim.rs
source/v-ft-xapian/: Cargo.toml
source/v-ft-xapian/src/: index_schema.rs  key2slot.rs  lib.rs  vql.rs  xapian_reader.rs  xapian_vql.rs  xerror.rs
source/v-module/: Cargo.toml
source/v-module/src/: info.rs  lib.rs  module.rs  onto.rs  ticket.rs
source/v-onto/: Cargo.toml
source/v-onto/src/onto/: cbor2individual.rs  cbor8individual.rs  datatype.rs  individual.rs  individual2json.rs  individual2msgpack.rs  individual2turtle.rs  json2individual.rs  json8individual.rs  lib.rs  msgpack2individual.rs  msgpack8individual.rs  onto.rs  onto_index.rs  parser.rs  resource.rs  turtle_formatters_with_prefixes.rs
source/v-search/: Cargo.toml
source/v-search/src/: clickhouse_client.rs  common.rs  ft_client.rs  lib.rs  search.rs
source/v-storage/: Cargo.toml
source/v-storage/src/: inproc_indv_r_storage.rs  lib.rs  lmdb_storage.rs  remote_indv_r_storage.rs  remote_storage_client.rs  storage.rs  tt_storage.rs
source/v-storage/src/storage/: tarantool.rs
source/v-v8/: Cargo.toml
source/v-v8/src/: callback.rs  common.rs  error.rs  inspector.rs  jsruntime.rs  lib.rs  scripts_workplace.rs  session_cache.rs  tokio_util.rs  version.rs
source/veda-auth/: Cargo.toml
source/veda-auth/src/: auth.rs  common.rs  main.rs
source/veda-az-indexer/: Cargo.toml
source/veda-az-indexer/src/: common.rs  main.rs
source/veda-bootstrap/: Cargo.toml
source/veda-bootstrap/src/: main.rs
source/veda-camunda-connector/: Cargo.toml  camunda-openapi.json  config.json  generate-client.sh
source/veda-camunda-connector/src/: common.rs  main.rs  start_form.rs
source/veda-camunda-connector/test/: test-process.bpmn  test-process.ttl
source/veda-camunda-external-task/: Cargo.toml
source/veda-camunda-external-task/src/: common.rs  main.rs  v8_script.rs
source/veda-ccus/: Cargo.toml
source/veda-ccus/src/: main.rs  server.rs
source/veda-ccus2/: Cargo.toml
source/veda-ccus2/src/: main.rs  queue_prepare.rs  shared_data.rs
source/veda-cleaner/: Cargo.toml
source/veda-cleaner/src/: clean_email.rs  common.rs  main.rs  v_s_email.rs  v_s_membership.rs  v_s_membership1.rs  v_s_membership2.rs  v_s_permission.rs  v_s_permissionstatement.rs  v_wf_process.rs
source/veda-exim-inquire/: Cargo.toml
source/veda-exim-inquire/src/: main.rs
source/veda-exim-respond/: Cargo.toml
source/veda-exim-respond/src/: main.rs
source/veda-extractor/: Cargo.toml
source/veda-extractor/src/: main.rs  v8_script.rs
source/veda-fanout-email/: Cargo.toml
source/veda-fanout-email/src/: main.rs
source/veda-fanout-sql/: Cargo.toml
source/veda-fanout-sql/src/: main.rs
source/veda-ft-indexer/: Cargo.toml
source/veda-ft-indexer/src/: context.rs  error.rs  index_schema.rs  index_workplace.rs  indexer.rs  key2slot.rs  ky2slot.rs  main.rs
(+2594 files in other folders)
