[package]
name = "veda-auth"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
nng = "1.0.0"
chrono = "0.4"
log = "0.4"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.3.1"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
parse_duration = "2.1.0"
ring = "0.16.20"
data-encoding = "2.3.2"
mustache = "0.9.0"

v_common = { package = "v-common", version = "=0.4.54" }
#v_common = { package = "v-common", path = "../../../v-common" }
