[package]
name = "veda-bootstrap"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
sysinfo = "0.18"
parse_duration = "2.1.1"
nix = "0.26.1"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
futures = "0.3.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rust-ini = "0.18"

v_common = { package = "v-common", version = "=0.4.54" }
#v_common = { package = "v-common", path = "../../../v-common" }

