[package]
name = "veda-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-web-static-files = "3"
actix-multipart = "0.3"
async-std = "1.11.0"
futures = "0.3.25"
sanitize-filename = "0.3"
awc = "2.0.3"

rusty_tarantool = "0.2.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#actix-rt = "1"
rmp = "^0.8"
rmp-serialize = "0.8.0"
chrono = "0.4"
num = "0.2.1"
num-traits = "0.2.11"
rust_decimal = "=1.12.3"
bincode = "1.2.1"
derivative = "2.1.1"
log = "0.4"
lmdb-rs-m = "0.7.7"
lazy_static = "1.4"
nng = "1.0.0"
nanoid = "0.3.0"
evmap = "10.0.2"
crc32fast = "1.2.0"
scan_fmt = "0.1.3"
base64 = "0.13.0"
url = "2.3.1"
filetime = "0.2.15"
reqwest = { version = "0.11" }
uuid = { version = "0.8", features = ["serde", "v4"] }
urlencoding = "2.1.0"
num_cpus = "1.13.1"

v_common = { package = "v-common", version = "=0.4.54" }
#v_common = { package = "v-common", path = "../../../v-common" }
