[package]
name = "libauthorization"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
#build = "build.rs"
edition = "2018"

[lib]
name = "authorization"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
v_az_lmdb = { package = "v-common-az-lmdb", version = "0.1.1" }
v_authorization = "0.1.0"

#[build-dependencies]
#cbindgen = "0.1"

