[package]
name = "libauthorization"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
#build = "build.rs"
edition = "2018"

[lib]
name = "authorization"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
v_common = { package = "v-common",  version = "0.1.61" }

#[build-dependencies]
#cbindgen = "0.1"

