[package]
name = "libvqueueinfo2c"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
#build = "build.rs"
edition = "2018"

[lib]
name = "vqueueinfo2c"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
v_queue = { package = "v_queue", version = "0.1.7" }
ffi-convert = "0.5.0"
libc = "0.2.66"

#[build-dependencies]
#cbindgen = "0.1"

