[package]
name = "tarantool_veda"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
name = "tarantool_veda"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"
tarantool_rust_api = {git="https://github.com/zheludkovm/TarantoolRustAPI", rev="b70472fca3ab8cfefa8595232b4433bc5a85697a"}
v_authorization = { path = "../v-authorization" }
v_onto = { path = "../v-onto" }
