[package]
name = "v_exim"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/exim.rs"

[dependencies]
log = "0.4"
enum-primitive-derive = "0.1"
num-traits = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
base64 = "0.13.0"

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }

