[package]
name = "v_ft_xapian"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
scan_fmt = "0.1.3"
crc32fast = "1.2.0"
maplit = "1.0.2"
chrono = "0.4"
xapian-rusty = "0.0.40"
#xapian-rusty = { path = "../xapian-rusty" }
regex = "1.3.9"
stopwatch = "0.0.7"

v_authorization = "0.1.0"

v_onto = { path = "../v-onto" }
v_module = { path = "../v-module" }
v_search = { path = "../v-search" }
v_api = { path = "../v-api" }
v_az_lmdb = { path = "../v-az-lmdb" }
v_storage = { path = "../v-storage" }
