[package]
name = "v_module"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
nng = "0.5.0"
env_logger = "0.6"
log = "0.4"
rust-ini = "0.13"
v_onto = { path = "../v-onto" }
v_queue = { path = "../v-queue" }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_api = { path = "../v-api" }
