[package]
name = "v_module"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.6"
nng = "0.5.1"
rust-ini = "0.16"
crc32fast = "1.2.0"
scan_fmt = "0.1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

v_onto = { path = "../v-onto" }
v_queue = { path = "../v-queue" }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_api = { path = "../v-api" }
