[package]
name = "v_search"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clickhouse-rs = "0.2.0-alpha.5"
futures = "0.3.5"
tokio = { version = "0.2.10", features = ["full"] }
log = "0.4"
nng = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.1.1"

v_api = { path = "../v-api" }
v_authorization = { path = "../v-authorization" }
v_az_lmdb = { path = "../v-az-lmdb" }
