[package]
name = "v_search"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clickhouse-rs = "=0.1.21"
futures = "=0.1.29"
tokio = "0.1.22"
log = "0.4"
nng = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.1.1"

v_api = { path = "../v-api" }
v_authorization = { path = "../v-authorization" }
v_az_lmdb = { path = "../v-az-lmdb" }
