[package]
name = "v_search"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clickhouse-rs = {git = "https://github.com/xbinxu/clickhouse-rs", rev = "6950ce586050d97cb423c9d49f142e54416cd46f", default-features = false, features = ["async_std"] }

futures = "0.3.5"
log = "0.4"
nng = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.1.1"

v_api = { path = "../v-api" }
v_authorization = "0.1.0"
v_az_lmdb = { path = "../v-az-lmdb" }
