[package]
name = "v_storage"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.1"
human-panic = "1.0.1"
log = "0.4"
rusty_tarantool = { git = "https://github.com/itiu/RustyTarantool.git" }
tokio = "0.1"
lmdb-rs-m = "0.7.7"
v_onto = { path = "../v-onto" }
