[package]
name = "v_storage"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.1"
log = "0.4"
rusty_tarantool = { git = "https://github.com/zheludkovm/RustyTarantool" }
tokio = "0.1"
lmdb-rs-m = "0.7.7"
nng = "0.5.1"
rust-ini = "0.13"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

v_onto = { path = "../v-onto" }
