[package]
name = "v_v8"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# sudo apt install libglib2.0-dev
rusty_v8 = "0.11.0"
log = "0.4"
chrono = "0.4.9"
lazy_static = "1.4.0"
rust_decimal = "1.7.0"

v_api = { path = "../v-api" }
v_onto = { path = "../v-onto" }
v_storage = { path = "../v-storage" }
v_search = { path = "../v-search" }
v_ft_xapian = { path = "../v-ft-xapian" }
v_module = { path = "../v-module" }
