[package]
name = "v_v8"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
# sudo apt install libglib2.0-dev
rusty_v8 = "0.14.0"
log = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
rust_decimal = "1.7.0"

warp = { version = "0.2.5", features = ["tls"] }
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"

v_api = { path = "../v-api" }
v_onto = { path = "../v-onto" }
v_storage = { path = "../v-storage" }
v_search = { path = "../v-search" }
v_ft_xapian = { path = "../v-ft-xapian" }
v_module = { path = "../v-module" }
