[package]
name = "veda-auth"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
time = "0.2.2"
log = "0.4"
rust-ini = "0.13"
nng = "0.5.1"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.3.1"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_onto = { path = "../v-onto" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }
v_authorization = { path = "../v-authorization" }
v_az_lmdb = { path = "../v-az-lmdb" }
