[package]
name = "veda-auth"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
rust-ini = "0.16"
nng = "0.5.1"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.3.1"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
parse_duration = "2.1.0"
ring = "0.16.19"

v_authorization = "0.1.0"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_ft_xapian = { git = "https://github.com/semantic-machines/v-common-ft-xapian.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_az_lmdb = { git = "https://github.com/semantic-machines/v-common-az-lmdb.git" }
