[package]
name = "veda-auth"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
rust-ini = "0.16"
nng = "0.5.1"
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.3.1"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
parse_duration = "2.1.0"
ring = "0.16.20"
data-encoding = "2.3.2"
mustache = "0.9.0"

v_authorization = "=0.1.0"

v_az_lmdb = { package = "v-common-az-lmdb", version = "=0.1.1" }
v_module = { package = "v-common-module", version = "0.1.24" }
v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.25" }
