[package]
name = "veda-az-indexer"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"

v_queue = "0.1"

v_onto = { path = "../v-onto" }
v_storage = { path = "../v-storage" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }

v_authorization = "0.1.0"
