[package]
name = "veda-az-indexer"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"

v_queue = "0.1"
v_authorization = "0.1.0"
v_onto = { package = "v-common-onto", version = "0.1.1" }
v_api = { package = "v-common-api", version = "0.1.2" }
v_storage = { package = "v-common-storage", version = "0.1.2" }
v_module = { package = "v-common-module", version = "0.1.7" }
