[package]
name = "veda-bootstrap"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.6"
sysinfo = "0.16.4"
rust-ini = "0.16"
parse_duration = "2.1.0"
nix = "0.20.0"

v_common = { package = "v-common", version = "=0.1.75" }
#v_common = { package = "v-common", path = "../../../v-common" }

