[package]
name = "veda-camunda-connector"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

camunda_client = { path = "../camunda-client" }
v_api = { path = "../v-api" }
v_module = { path = "../v-module" }
v_storage = { path = "../v-storage" }
v_onto = { path = "../v-onto" }
v_queue = { path = "../v-queue" }
