[package]
name = "veda-camunda-connector"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "^1.0"

v_queue = "0.1"

camunda_client = { path = "../camunda-client" }
v_api = { path = "../v-api" }
v_module = { path = "../v-module" }
v_storage = { path = "../v-storage" }
v_onto = { path = "../v-onto" }
