[package]
name = "veda-camunda-connector"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "^1.0"

v_queue = "0.1"

camunda_client = { path = "../camunda-client" }

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
