[package]
name = "veda-camunda-external-task"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
rusty_v8 = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "^1.0"

camunda_client = { path = "../camunda-client" }
v_v8 = { path = "../v-v8" }
v_api = { path = "../v-api" }
v_module = { path = "../v-module" }
v_storage = { path = "../v-storage" }
v_onto = { path = "../v-onto" }
v_search = { path = "../v-search" }
v_ft_xapian = { path = "../v-ft-xapian" }
