[package]
name = "veda-ccus"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-ccus"
path = "src/main.rs"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
chrono = "0.4"
env_logger = "0.6"
log = "0.4"
rust-ini = "0.16"
rand = "0.7"
#tokio = "0.3.5"
#futures = "0.3.8"

v_queue = "0.1"

v_module = { path = "../v-module" }
v_onto = { path = "../v-onto" }
v_storage = { path = "../v-storage" }