[package]
name = "veda-ccus2"
version = "0.2.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2021"

[[bin]]
name = "veda-ccus2"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
env_logger = "0.6"
scan_fmt = "0.2"
log = "0.4"
rand = "0.7"
ws = "0.9.2"
time = "0.1.40"
#evmap = "10.0.2"
thiserror = "1.0.36"

#mio = "0.6.14"
#mio-extras = "2.0"

#crossbeam = "0.8"

v_common = { package = "v-common", version = "=0.4.34" }
#v_common = { package = "v-common", path = "../../../v-common" }
