[package]
name = "veda-cleaner"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
time = "0.1.42"
log = "0.4"
rust-ini = "0.16"
nng = "0.5.1"
serde_json = "1.0"
serde = "1.0"
url = "2.1.1"
quote = "1.0.3"

v_onto = { path = "../v-onto" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }
v_authorization = "0.1.0"
v_az_lmdb = { path = "../v-az-lmdb" }
v_search = { path = "../v-search" }
