[package]
name = "veda-cleaner"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
time = "0.1.42"
log = "0.4"
rust-ini = "0.16"
nng = "0.5.1"
serde_json = "1.0"
serde = "1.0"
url = "2.1.1"
quote = "1.0.3"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_authorization = "0.1.0"
v_az_lmdb = { git = "https://github.com/semantic-machines/v-common-az-lmdb.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
