[package]
name = "veda-exim-inquire"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-exim-inquire"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
serde_json = "1.0"
env_logger = "0.6"
log = "0.4"
rust-ini = "0.13"
v_queue = { path = "../v-queue" }
v_onto = { path = "../v-onto" }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }
v_exim = { path = "../v-exim" }
