[package]
name = "veda-exim-inquire"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-exim-inquire"
path = "src/main.rs"

[dependencies]
log = "0.4"

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_exim = { path = "../v-exim" }
