[package]
name = "veda-exim-respond"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-exim-respond"
path = "src/main.rs"

[dependencies]
log = "0.4"
serde_derive = "1.0"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_exim = { path = "../v-exim" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
