[package]
name = "veda-extractor"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-extractor"
path = "src/main.rs"

[dependencies]
log = "0.4"

v_queue = { path = "../v-queue" }
v_onto = { path = "../v-onto" }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }
v_exim = { path = "../v-exim" }
