[package]
name = "veda-extractor"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-extractor"
path = "src/main.rs"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
rusty_v8 = "0.14.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "^1.0"

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_ft_xapian = { git = "https://github.com/semantic-machines/v-common-ft-xapian.git" }
v_v8 = { git = "https://github.com/semantic-machines/v-common-v8.git" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git" }
v_exim = { path = "../v-exim" }
