[package]
name = "veda-fanout-email"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
lettre = "0.9"
lettre_email = "0.9"

v_common = { package = "v-common", version = "=0.1.91" }
#v_common = { package = "v-common", path = "../../../v-common" }
