[package]
name = "veda-fanout-email"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
lettre = "0.11"
#lettre_email = "0.9.4"

urlencoding = "2.1.3"
mime_guess = "2.0.5"

v_common = { package = "v-common", version = "=0.18.0", features = ["tokio_0_2", "tt_2", "awc_2"] }
v-individual-model = "0.2.0"
v-storage = "0.1.1"


[profile.release]
opt-level = 1
