[package]
name = "veda-fanout-sql"
version = "0.1.0"
authors = ["Roman Karpov <roman.karpov@gmail.com>"]
edition = "2018"

[dependencies]
mysql = "17.0.0"
log = "0.4"
chrono = "0.4"

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git", version = "0.1.1" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git", version = "0.1.3" }
