[package]
name = "veda-fanout-sql"
version = "0.1.0"
authors = ["Roman Karpov <roman.karpov@gmail.com>"]
edition = "2018"

[dependencies]
mysql = "17.0.0"
log = "0.4"
chrono = "0.4"

v_queue = "=0.1"
v_onto = { package = "v-common-onto", version = "=0.1.1" }
v_api = { package = "v-common-api", version = "=0.1.2" }
v_storage = { package = "v-common-storage", version = "=0.1.5" }
v_module = { package = "v-common-module", version = "=0.1.13" }
