[package]
name = "veda-fanout-sql"
version = "0.1.0"
authors = ["Roman Karpov <roman.karpov@gmail.com>"]
edition = "2021"

[dependencies]
mysql = "17.0.0"
log = "0.4"
chrono = "0.4"

v_common = { package = "v-common", version = "0.1.104" }
#v_common = { package = "v-common", path = "../../../v-common" }
