[package]
name = "veda-ft-indexer"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
xapian-rusty = "0.0.37"
#xapian-rusty = { path = "../xapian-rusty" }

v_queue = { path = "../v-queue" }
v_onto = { path = "../v-onto" }
v_storage = { path = "../v-storage" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }
v_search = { path = "../v-search" }
v_ft_xapian = { path = "../v-ft-xapian" }