[package]
name = "veda-ft-indexer"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
xapian-rusty = "0.0.42"
#xapian-rusty = { path = "../xapian-rusty" }

v_queue = "0.1"

v_api = { git = "https://github.com/semantic-machines/v-common-api.git", branch = "main" }
v_onto = { git = "https://github.com/semantic-machines/v-common-onto.git" }
v_storage = { git = "https://github.com/semantic-machines/v-common-storage.git" }
v_module = { git = "https://github.com/semantic-machines/v-common-module.git", version = "0.1.1" }
v_search = { git = "https://github.com/semantic-machines/v-common-search.git" }
v_ft_xapian = { git = "https://github.com/semantic-machines/v-common-ft-xapian.git", version = "0.1.1" }
