[package]
name = "veda-ft-indexer"
version = "0.1.0"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
xapian-rusty = "0.0.44"
#xapian-rusty = { path = "../xapian-rusty" }

v_queue = "0.1"
v_onto = { package = "v-common-onto", version = "0.1.1" }
v_api = { package = "v-common-api", version = "0.1.2" }
v_storage = { package = "v-common-storage", version = "0.1.5" }
v_search = { package = "v-common-search", version = "0.1.2" }
v_module = { package = "v-common-module", version = "0.1.12" }
v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.10" }
